--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://play-lh.googleusercontent.com/INq-dtjZNCOBXuLOGRR_lKURuuPKk_v6bOSgb_nbhKEqXMaWrI3UZmhXuEY2OmhAlJFO=w300-h300-pc0xffffff-pd"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>WorldWise</title>
   </head>
   <body>
     <div id="root"></div>
